# kodairenkei

./: .gitignore  README.md  app.py  app_convenience_store.py  app_convenience_store2.py  app_convenience_store_grid.py  app_gemini.py  app_park.py  app_park2.py  app_park_grid.py  app_test.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
